# Parallel-Verifier

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  OldVerif.cpp  ParallelVerifier.dot  README.md  S-ExpressionParser.cpp  SExpression  SExpression.cpp  SExpression.hpp  SExpressionParser.cpp  SExpressionParser.h  benchmark.sh  build-debug.sh  build.sh  debugParallel.sh  generateBenchmarks.py  hyperslateUtils.cpp  hyperslateUtils.h  hyperslateUtils.hpp  makefile  sExpressionTest.cpp  ssBenchmark.sh  test.sh  testAllProofs.sh  testResults  wsBenchmark.sh
.github/workflows/: test.yml  test_and_release.yml
benchmarks/: Branch.slt  Strait.slt  Tree.slt  quickbench.py
hyperslateProofs/: Readme.md
hyperslateProofs/proofs/: broken.slt
hyperslateProofs/tests/: 7.slt
proofs/: AllFirstOrderJusts.slt  Fail.slt  VerifierSample.slt  laryLikesLucy.slt
proofs/brandons_testcases/: 10.slt  3.slt  4.slt  6.slt  9.slt
proofs/hyperslate/: generateBenchmarks.py  generateLFTreeBench.py
proofs/hyperslate/tests/: 2.slt  5.slt  8.slt
proofs/lazyslate/: allRulesIllegal.json  illegalJust.json  nullModels.py  orDistribution.json  ourFavorite.json
proofs/lazyslate/SAFormula/: And.py  Atom.py  Belief.py  BiConditional.py  Equal.py  Existential.py  Formula.py  Function.py  Greater.py  Implication.py  Integer.py  Justification.py  Knowledge.py  LBelief.py  Modal.py  Not.py  Obligation.py  Odds.py  Or.py  Parser.py  Perception.py  Predicate.py  Proposition.py  Quantifier.py  README.md  SFBelief.py  Says.py  Universal.py  Variable.py  Withhold.py
sandbox/: build.sh  omptest.cpp
scripts/: build-debug.sh  build-release.sh  debugParallel.sh  dependancyGraph.sh
src/: CMakeLists.txt  MPIVerifier.cpp  OMPVerify.cpp  ParallelVerifier.cpp  Proof.cpp  Proof.hpp  ProofConv.cpp  ProofConverter.cpp  README.md  SExpression.cpp  SExpression.hpp  SerialVerifier.cpp  SharedVerifier.cpp  SharedVerifier.hpp  Substitution.cpp  Substitution.hpp  Verifier.cpp  hyperslateUtils.cpp  hyperslateUtils.hpp  timing.hpp
src/InferenceRules/: and.cpp  and.hpp  assume.cpp  equals.cpp  equals.hpp  exists.cpp  exists.hpp  forall.cpp  forall.hpp  if.cpp  if.hpp  iff.cpp  iff.hpp  not.cpp  not.hpp  or.cpp  or.hpp
src/LibMPIVerifier/: CMakeLists.txt  LibMPIVerifier.hpp  MPIUtil.cpp  MPIUtil.hpp  assumptionUpdates.cpp  getLayersMPI.cpp  verifyLoadBalance.cpp  verifyNoOpt.cpp  verifyOriginal.cpp
src/LibOMPVerifier/: CMakeLists.txt  LibOMPVerifier.hpp  verifyOpenMP.cpp  verifyOpenMPBF.cpp  verifyOpenMPLB.cpp  verifyOpenMPOriginal.cpp
src/LibParallelVerifier/: CMakeLists.txt  LibParallelVerifier.cpp  LibParallelVerifier.hpp  MPIUtil.cpp  MPIUtil.hpp  assumptionUpdates.cpp  getLayersMPI.cpp  getLayersSerial.cpp  verifyAlpha.cpp  verifyLoadBalance.cpp  verifyNoOpt.cpp  verifyOriginal.cpp
src/Proof/: CMakeLists.txt  Proof.cpp  Proof.hpp
src/ProofIO/: CMakeLists.txt  HyperSlate.cpp  HyperSlate.hpp  Lazyslate.cpp  Lazyslate.hpp  Lazyslate_jsoncpp.cpp  Lazyslate_shared.cpp  Proof.cpp  Proof.hpp  ProofIO.cpp  ProofIO.hpp  Writers.cpp
src/SExpression/: CMakeLists.txt  SExpression.cpp  SExpression.hpp
src/SharedVerifier/: CMakeLists.txt  Readme.md  SharedVerifier.cpp  SharedVerifier.hpp  Substitution.cpp  Substitution.hpp  timing.hpp
src/SharedVerifier/InferenceRules/: and.cpp  and.hpp  assume.cpp  assume.hpp  equals.cpp  equals.hpp  exists.cpp  exists.hpp  forall.cpp  forall.hpp  if.cpp  if.hpp  iff.cpp  iff.hpp  not.cpp  not.hpp  or.cpp  or.hpp  rules.hpp
src/trash/: generateBenchmarks.cpp
tests/: 1.slt  Branch1-12.slt  CMakeLists.txt  ProofIOTest.cpp  ProofIOTests.cpp  SExpressionTest.cpp  allRulesProof.json
trash/: Lazyslate_boost.cpp  LibParallelVerifier.cpp  Makefile  OldVerif.cpp  ParallelVerifier.cpp  Readme.md  test.json
